<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@android:drawable/ic_menu_today"
        android:title="الرئيسية" />
    <item
        android:id="@+id/nav_live"
        android:icon="@android:drawable/ic_menu_view"
        android:title="@string/tab_live" />
    <item
        android:id="@+id/nav_movies"
        android:icon="@android:drawable/ic_menu_slideshow"
        android:title="@string/tab_movies" />
    <item
        android:id="@+id/nav_series"
        android:icon="@android:drawable/ic_menu_gallery"
        android:title="@string/tab_series" />
    <item
        android:id="@+id/nav_favorites"
        android:icon="@android:drawable/btn_star"
        android:title="@string/tab_favorites" />
</menu>
